# TicketCounter

./: CMakeLists.txt  README-en.md  README.md
include/: AppLogic.hpp  MainApp.hpp  TicketStorage.hpp  TimeService.hpp
include/ui/: GraphPage.hpp  HistoryItem.hpp  HotkeyBinder.hpp  MainPage.hpp  SettingsPage.hpp  StatsPage.hpp
src/: AppLogic.cpp  CMakeLists.txt  MainApp.cpp  TicketStorage.cpp  TimeService.cpp
src/ui/: GraphPage.cpp  HotkeyBinder.cpp  MainPage.cpp  SettingsPage.cpp  StatsPage.cpp
